checkoffs/lab1/niklasv/2025-01-09_21-11-24.txt
/Users/josephtan/140e-dumb-autograder/repos/niklasv
rm -f quine-gen quine-out.c quine.c quine *~
gcc -Og -g -Wall quine-gen.c -o quine-gen
--------------------------------------------
checking that the quine generates itself

1. Generating a quine
./quine-gen < seed.c > quine.c
gcc quine.c -o quine
2. Using quine to generate itself
./quine > quine-out.c
3. Checking generated quine matches quine
diff quine.c quine-out.c
**** Success: Quine matches its output ***
--------------------------------------------

make -C ../step1 clean
rm -f quine-gen quine-out.c quine.c quine *~
make -C ../step2 clean
rm -f  compiler-attacked login-attacked out login compiler trojan-compiler *.o a.out  *~ compiler-attacked.c login-attacked.c out.c temp-out.c
rm -f  trojan-compiler2 *.o *~  cc-attacked cc-attacked2 temp-out.c out login-attacked.c login-attacked attack-quine.c
make -C ../step1
gcc -Og -g -Wall quine-gen.c -o quine-gen
../step1/quine-gen  < attack-seed.c > attack-quine.c
gcc -Og -g -Wall trojan-compiler2.c -o trojan-compiler2
running check.sh
In file included from trojan-compiler2.c:357:
./attack-quine.c:286:6: error: expected expression
    }<U+001E><98><9B>D<E2><U+0001>
     ^
./attack-quine.c:286:7: error: source file is not valid UTF-8
    }<U+001E><98><9B>D<E2><U+0001>
             ^
./attack-quine.c:286:8: error: source file is not valid UTF-8
    }<U+001E><98><9B>D<E2><U+0001>
                 ^
./attack-quine.c:286:10: error: source file is not valid UTF-8
    }<U+001E><98><9B>D<E2><U+0001>
                      ^
4 errors generated.
make: *** [trojan-compiler2] Error 1
check.sh:4: no such file or directory: ./trojan-compiler2
check.sh:7: no such file or directory: ./cc-attacked
diff: cc-attacked: No such file or directory
check.sh:12: no such file or directory: ./cc-attacked2
check.sh:13: no such file or directory: ./cc-attacked2
check.sh:14: no such file or directory: ./cc-attacked2
check.sh:15: no such file or directory: ./cc-attacked2
check.sh:16: no such file or directory: ./cc-attacked2
check.sh:17: no such file or directory: ./cc-attacked2
check.sh:18: no such file or directory: ./cc-attacked2
check.sh:19: no such file or directory: ./cc-attacked2
check.sh:28: no such file or directory: ./cc-attacked2
check.sh:29: no such file or directory: ./login-attacked

Return code: 127
